<resources>
    <string name="app_name">Kiwi</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Password (confirm)</string>
    <string name="prompt_license_num">Driver\'s license number</string>
    <string name="prompt_license_lssued">Date Issued</string>
    <string name="prompt_license_expiration">Expiration Date</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="already">Already registered? Login!</string>

    <string name="action_sign_in_short">Sign in</string>

    <string name="str_done">완료</string>

    <string name="hello">Hello World, NMapViewer!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_navi">HomeNaviActivity</string>
    <string name="title_home">Home</string>
    <string name="title_mypage">mypage</string>
    <string name="title_setting">setting</string>
    <string name="title_activity_navi">NaviActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="purchase_succeed">티켓 구매성공!!</string>
    <string name="purchase_error">티켓 구매실패!</string>

</resources>
