<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hansung.android.kiwi.RegisterActivity"
    android:orientation="vertical"
    android:gravity="center">

    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/email_register_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/holo_green_light"
            android:textSize="38sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="380dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="4dp"
            android:padding="10dp"
            android:background="@drawable/edit_back"
            android:gravity="center"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/name"
                    android:layout_width="280dp"
                    android:layout_height="40dp"
                    android:hint="@string/prompt_name"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:padding="4dp"
                    android:singleLine="true"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="280dp"
                    android:layout_height="40dp"
                    android:hint="@string/prompt_email"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="4dp"
                    android:singleLine="true"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/password"
                    android:layout_width="280dp"
                    android:layout_height="40dp"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="4dp"
                    android:singleLine="true"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/pass"
                    android:layout_width="280dp"
                    android:layout_height="40dp"
                    android:hint="@string/prompt_password_confirm"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="4dp"
                    android:singleLine="true"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/license_num"
                    android:layout_width="280dp"
                    android:layout_height="40dp"
                    android:hint="@string/prompt_license_num"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="number"
                    android:maxLines="1"
                    android:padding="4dp"
                    android:singleLine="true"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/license_issued"
                    android:layout_width="280dp"
                    android:layout_height="40dp"
                    android:hint="@string/prompt_license_lssued"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="number"
                    android:maxLines="1"
                    android:padding="4dp"
                    android:singleLine="true"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/license_expiration"
                    android:layout_width="280dp"
                    android:layout_height="40dp"
                    android:hint="@string/prompt_license_expiration"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="number"
                    android:maxLines="1"
                    android:padding="4dp"
                    android:singleLine="true"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/register"
            style="?android:textAppearanceSmall"
            android:layout_width="300dp"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/register"
            android:textStyle="bold"
            android:background="@drawable/btn"
            android:textColor="@color/edit_back"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:text="@string/already"
            android:textStyle="bold"
            android:textSize="13sp"
            android:gravity="center"
            android:textColor="@android:color/holo_green_light"/>

    </LinearLayout>
</LinearLayout>